--- a/index.html
+++ b/index.html
@@ -1,57 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<link rel="stylesheet" href="index.css">
-	<link rel="icon" type="image/x-icon" href="GG.ico.ico">
+    <meta charset="UTF-8">
+    <!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="QuoteGen.css">
+    <link rel="icon" type="image/x-icon" href="GG.ico.ico">
     <script src="https://kit.fontawesome.com/2b10be229a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="index.js"></script>
+    <title> tGC's Quote Generator ©</title>
 </head>
 <body>
-	<div class="kl">
-	<h3 style="text-align: center;"><span id="v">t</span><span id="s">he</span><span id="v">G</span><span id="q">eeky</span><span id="v">C</span><span id="t">had</a></span></h3></a> <br>
-	</div>
-	<div id="clockContainer">
-		<div id="hour"></div>
-		<div id="minute"></div>
-		<div id="second"></div>
-	</div>
+    <span id="v">t</span><span id="s">he</span><span id="v">G</span><span id="q">eeky</span><span id="v">C</span><span id="t">had</a></span></a> <br>
 
-<BR>
-<HR>
-<div class="row">
-			<div class="col-sm-6 mb-3 mb-sm-0">
-			  <div class="card">
-				<div class="card-body">
-				  <h3 class="card-title">tGC's JavaScript Analog Clock</h3> 
-				  <hr>
-				  <h4 class="card-text">Presenting tGC's JavaScript Analog Clock . <br>Web Technologies Used: HTML, CSS, JavaScript. <br> Concept: Date & Time Function Methods.</h4>
-
-				  <hr>
-				
-				</div>
-			  </div>
-			</div>
-			<div class="col-sm-6 mb-3 mb-sm-0">
-				<div class="card">
-					<div class="card-body">
-						<h3 class="card-title">Responsive, Device Friendly Optimized Code.</h3>
-						<hr>
-						<h4 class="card-text"> JavaScript Time Function Method Used. <br> Time Set: GMT +5:30 (Delhi, Kolkata, India)</h4>
-						<hr>
-					
-					</div>
-				</div>
-				<br>
-			</div>
-		
-			
-</div>
+    <video class="d" autoplay loop muted>
+        <source src="VD.mp4" type="video/mp4">>
+    </video>
+<!--HTML CODE TO SKELETONIZE THE SITE WITH BUTTON, OUTPUT AREA AND PERSONALIZATION-->
+<script>
+    alert("Quote Generator By Lord AYUSH JHA, Using HTML, CSS, JS: ");
+</script>
+<br>
+<marquee bgcolor ="tomato" behavior="alternate" direction="left"> Scripted By theGeekyChad: [HTML, CSS, JS]</marquee>
+<br>
+<!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
+<!--YOU CAN FREELY EDIT AND USE THE CODE HEREBY. -->
+    <div id="container">
+    <button class="slide-top" id="btn">Click To Generate New Quote!</button>
+    <br>
+    <hr>
+    <br>
+    <div class="slide-out-elliptic-top-fwd" id="output">Optimized Quote Gen. By theGeekyChad !
+<!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
+    </div>
+    </div>
+<script src="QuoteGen.js"></script>
+<!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+</script>
+<!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
 </body>
 </html>
