--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="QuoteGen.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/x-icon" href="GG.ico.ico">
     <script src="https://kit.fontawesome.com/2b10be229a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <span id="v">t</span><span id="s">he</span><span id="v">G</span><span id="q">eeky</span><span id="v">C</span><span id="t">had</a></span></a> <br>
 
     <video class="d" autoplay loop muted>
-        <source src="VD.mp4" type="video/mp4">>
+        <source src="index.mp4" type="video/mp4">>
     </video>
 <!--HTML CODE TO SKELETONIZE THE SITE WITH BUTTON, OUTPUT AREA AND PERSONALIZATION-->
 <script>
@@ -37,7 +37,7 @@
 <!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
     </div>
     </div>
-<script src="QuoteGen.js"></script>
+<script src="index.js"></script>
 <!--CODE PROVIDED BY LORD AYUSH JHA; @theGeekyChad ©-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 </script>
